因目前HHL线路函数返回结果不是直接计算结果，调整代码为调用solve接口 修订Hadamard Test线路图、QPE线路图和HHL线路图 修订振幅放大中公式里部分变量字母不统一的问题 更换QPE中的算例为更合适的算例 修订HHL中公式上下标存在的颠倒问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
@@ -8,3 +8,5 @@
 /.vscode/settings.json
 /source/_build/html/.doctrees
 /source/_build/html
+source/_build/
+source/.vscode/
