--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
-################################################################################
+﻿################################################################################
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
+/.vs/github_QPanda2/v15/.suo
+.vscode
+.vs
+source/_build
+/build
+/source/sphinx/__pycache__
+/.vs
 /.vs/slnx.sqlite
 /.vs
 /build
 /.vscode/settings.json
 /source/_build/html/.doctrees
 /source/_build/html
-source/_build/
-source/.vscode/
+/source/_build/.vscode
