--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,7 +3,7 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
-version: 1
+version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -11,10 +11,10 @@ sphinx:
 
 # Optionally build your docs in additional formats such as PDF
 formats:
-   - pdf
+   - htmlzip
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: "3.7"
+   version: "3.9"
    install:
    - requirements: ./requirements.txt
