--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,6 +14,10 @@ formats:
    - htmlzip
 
 # Optionally set the version of Python and requirements required to build your docs
+
+build:
+  os: ubuntu-22.04
+
 python:
    version: "3.9"
    install:
